--- a/history.html
+++ b/history.html
@@ -48,7 +48,7 @@
             <div class="col-4 text-center justify-content-center">
                 <h1 class="h2">History Transaksi</h1>
                 <span style="color: #605858;">
-                    Malang, Indonesia
+                    Indonesia
                 </span>
             </div>
         </div>
