--- a/history.html
+++ b/history.html
@@ -13,6 +13,7 @@
 
     <title>GIRIDORZZ</title>
 </head>
+<body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light container">
             <a href=" details.html" class="brand-text-wrapper">
@@ -55,44 +56,140 @@
     </section><br>
 
 <header>
-    <nav class="navbar navbar-expand-lg navbar-light container">
-            <span style="color: #1789e660;" class="list-text-icon">Best prize</span>
+    <nav>
+        <section class="container">
+            <div class="row">
+                <div>
+                    <span style="color: #1789e660;" class="list-text-icon">Best Prize</span> 
+                </div>
+                <div class="card-hotel">
+                    <div class="rating">4.5</div>
+                    <div class="price">Rp. 200.000/malam</div>
+                    <img src="Assets/Images/imgBedroom.png" alt="">
+                    <div class="layer-shadow">
+                        <h5>Ocean Land</h5>
+                        <h7>Bandung, Indonesia</h7>
+                    </div>
+                </div>
+            </div><br><br>
+        </section>
     </nav>
     <nav class="navbar navbar-expand-lg navbar-light container">
-        <span style="color: #804040;">Rp.2.500.000</span>
-        <span style="position: absolute; top: 0; right: 0;" class="history-text-icon">Asyraf Rizqullah</span>
+        <section class="container">
+            <div>
+                <table>
+                    <tr>
+                        <td>
+                            <span style="color: #804040;" class="list-text-icon">Deluxe Room</span>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <span style="color: #000000;" class="history-text-icon">20 dec - 23 dec 1 orang</span>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+        </section>
     </nav>
     <nav class="navbar navbar-expand-lg navbar-light container">
-        <span style="color: #804040;">Deluxe Room</span>
-        <span style="position: absolute; top: 0; right: 0;" class="history-text-icon">20 dec - 23 dec *1 Pasengger</span>
+        <section class="container">
+            <div>
+                <span style="color: #000000;" class="history-text-icon">Asyraf Rizqullah</span>
+            </div>
+        </section>
     </nav>
 </header>
 
 <header>
-    <nav class="navbar navbar-expand-lg navbar-light container">
-            <span style="color: #1789e660;" class="list-text-icon">Best prize</span>
+    <nav>
+        <section class="container">
+            <div class="row">
+                <div>
+                    <span style="color: #1789e660;" class="list-text-icon">Best Prize</span> 
+                </div>
+                <div class="card-hotel">
+                    <div class="rating">4.5</div>
+                    <div class="price">Rp. 200.000/malam</div>
+                    <img src="Assets/Images/imgBedroom.png" alt="">
+                    <div class="layer-shadow">
+                        <h5>Ocean Land</h5>
+                        <h7>Bandung, Indonesia</h7>
+                    </div>
+                </div>
+            </div><br><br>
+        </section>
     </nav>
     <nav class="navbar navbar-expand-lg navbar-light container">
-        <span style="color: #804040;">Rp.2.500.000</span>
-        <span style="position: absolute; top: 0; right: 0;" class="history-text-icon">Asyraf Rizqullah</span>
+        <section class="container">
+            <div>
+                <table>
+                    <tr>
+                        <td>
+                            <span style="color: #804040;" class="list-text-icon">Deluxe Room</span>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <span style="color: #000000;" class="history-text-icon">20 dec - 23 dec 1 orang</span>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+        </section>
     </nav>
     <nav class="navbar navbar-expand-lg navbar-light container">
-        <span style="color: #804040;">Deluxe Room</span>
-        <span style="position: absolute; top: 0; right: 0;" class="history-text-icon">20 dec - 23 dec *1 Pasengger</span>
+        <section class="container">
+            <div>
+                <span style="color: #000000;" class="history-text-icon">Asyraf Rizqullah</span>
+            </div>
+        </section>
     </nav>
 </header>
 
 <header>
-    <nav class="navbar navbar-expand-lg navbar-light container">
-            <span style="color: #1789e660;" class="list-text-icon">Best prize</span>
+    <nav>
+        <section class="container">
+            <div class="row">
+                <div>
+                    <span style="color: #1789e660;" class="list-text-icon">Best Prize</span> 
+                </div>
+                <div class="card-hotel">
+                    <div class="rating">4.5</div>
+                    <div class="price">Rp. 200.000/malam</div>
+                    <img src="Assets/Images/imgBedroom.png" alt="">
+                    <div class="layer-shadow">
+                        <h5>Ocean Land</h5>
+                        <h7>Bandung, Indonesia</h7>
+                    </div>
+                </div>
+            </div><br><br>
+        </section>
     </nav>
     <nav class="navbar navbar-expand-lg navbar-light container">
-        <span style="color: #804040;">Rp.2.500.000</span>
-        <span style="position: absolute; top: 0; right: 0;" class="history-text-icon">Asyraf Rizqullah</span>
+        <section class="container">
+            <div>
+                <table>
+                    <tr>
+                        <td>
+                            <span style="color: #804040;" class="list-text-icon">Deluxe Room</span>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <span style="color: #000000;" class="history-text-icon">20 dec - 23 dec 1 orang</span>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+        </section>
     </nav>
     <nav class="navbar navbar-expand-lg navbar-light container">
-        <span style="color: #804040;">Deluxe Room</span>
-        <span style="position: absolute; top: 0; right: 0;" class="history-text-icon">20 dec - 23 dec *1 Pasengger</span>
+        <section class="container">
+            <div>
+                <span style="color: #000000;" class="history-text-icon">Asyraf Rizqullah</span>
+            </div>
+        </section>
     </nav>
 </header>
 
@@ -140,3 +237,5 @@
         </div>
         <p class="footer-last-text text-center">Copyright 2021 • All rights reserved • GIRIDORZZ</p>
     </footer>
+</body>
+</html>
