--- a/history.html
+++ b/history.html
@@ -8,25 +8,26 @@
     <link rel="shortcut icon" href="./Assets/Images/logo.png" type="image/x-icon">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="./Assets/css/details.css">
 
     <title>GIRIDORZZ</title>
 </head>
+
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light container">
-            <a href=" details.html" class="brand-text-wrapper">
+            <a href="#" class="brand-text-wrapper">
                 <span class="brand-text-icon">GIRIDORZZ</span>
             </a>
             <nav class="navbar-nav navbar-center">
-                <a class="nav-link" href="details.html">
+                <a class="nav-link" href="#">
                     Home
                 </a>
-                <a class="nav-link" href="#">
+                <a class="nav-link active" href="#">
                     Booking
                 </a>
-                <a class="nav-link active" href="#">
+                <a class="nav-link" href="detail-hotel.html">
                     Hotels
                 </a>
             </nav>
@@ -55,143 +56,143 @@
         </div>
     </section><br>
 
-<header>
-    <nav>
-        <section class="container">
-            <div class="row">
-                <div>
-                    <span style="color: #1789e660;" class="list-text-icon">Best Prize</span> 
-                </div>
-                <div class="card-hotel">
-                    <div class="rating">4.5</div>
-                    <div class="price">Rp. 200.000/malam</div>
-                    <img src="Assets/Images/imgBedroom.png" alt="">
-                    <div class="layer-shadow">
-                        <h5>Ocean Land</h5>
-                        <h7>Bandung, Indonesia</h7>
+    <header>
+        <nav>
+            <section class="container">
+                <div class="row">
+                    <div>
+                        <span style="color: #1789e660;" class="list-text-icon">Best Prize</span>
                     </div>
+                    <div class="card-hotel">
+                        <div class="rating">4.5</div>
+                        <div class="price">Rp. 200.000/malam</div>
+                        <img src="Assets/Images/imgBedroom.png" alt="">
+                        <div class="layer-shadow">
+                            <h5>Ocean Land</h5>
+                            <h7>Bandung, Indonesia</h7>
+                        </div>
+                    </div>
+                </div><br><br>
+            </section>
+        </nav>
+        <nav class="navbar navbar-expand-lg navbar-light container">
+            <section class="container">
+                <div>
+                    <table>
+                        <tr>
+                            <td>
+                                <span style="color: #804040;" class="list-text-icon">Deluxe Room</span>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <span style="color: #000000;" class="history-text-icon">20 dec - 23 dec 1 orang</span>
+                            </td>
+                        </tr>
+                    </table>
                 </div>
-            </div><br><br>
-        </section>
-    </nav>
-    <nav class="navbar navbar-expand-lg navbar-light container">
-        <section class="container">
-            <div>
-                <table>
-                    <tr>
-                        <td>
-                            <span style="color: #804040;" class="list-text-icon">Deluxe Room</span>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <span style="color: #000000;" class="history-text-icon">20 dec - 23 dec 1 orang</span>
-                        </td>
-                    </tr>
-                </table>
-            </div>
-        </section>
-    </nav>
-    <nav class="navbar navbar-expand-lg navbar-light container">
-        <section class="container">
-            <div>
-                <span style="color: #000000;" class="history-text-icon">Asyraf Rizqullah</span>
-            </div>
-        </section>
-    </nav>
-</header>
+            </section>
+        </nav>
+        <nav class="navbar navbar-expand-lg navbar-light container">
+            <section class="container">
+                <div>
+                    <span style="color: #000000;" class="history-text-icon">Asyraf Rizqullah</span>
+                </div>
+            </section>
+        </nav>
+    </header>
 
-<header>
-    <nav>
-        <section class="container">
-            <div class="row">
-                <div>
-                    <span style="color: #1789e660;" class="list-text-icon">Best Prize</span> 
-                </div>
-                <div class="card-hotel">
-                    <div class="rating">4.5</div>
-                    <div class="price">Rp. 200.000/malam</div>
-                    <img src="Assets/Images/imgBedroom.png" alt="">
-                    <div class="layer-shadow">
-                        <h5>Ocean Land</h5>
-                        <h7>Bandung, Indonesia</h7>
+    <header>
+        <nav>
+            <section class="container">
+                <div class="row">
+                    <div>
+                        <span style="color: #1789e660;" class="list-text-icon">Best Prize</span>
                     </div>
+                    <div class="card-hotel">
+                        <div class="rating">4.5</div>
+                        <div class="price">Rp. 200.000/malam</div>
+                        <img src="Assets/Images/imgBedroom.png" alt="">
+                        <div class="layer-shadow">
+                            <h5>Ocean Land</h5>
+                            <h7>Bandung, Indonesia</h7>
+                        </div>
+                    </div>
+                </div><br><br>
+            </section>
+        </nav>
+        <nav class="navbar navbar-expand-lg navbar-light container">
+            <section class="container">
+                <div>
+                    <table>
+                        <tr>
+                            <td>
+                                <span style="color: #804040;" class="list-text-icon">Deluxe Room</span>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <span style="color: #000000;" class="history-text-icon">20 dec - 23 dec 1 orang</span>
+                            </td>
+                        </tr>
+                    </table>
                 </div>
-            </div><br><br>
-        </section>
-    </nav>
-    <nav class="navbar navbar-expand-lg navbar-light container">
-        <section class="container">
-            <div>
-                <table>
-                    <tr>
-                        <td>
-                            <span style="color: #804040;" class="list-text-icon">Deluxe Room</span>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <span style="color: #000000;" class="history-text-icon">20 dec - 23 dec 1 orang</span>
-                        </td>
-                    </tr>
-                </table>
-            </div>
-        </section>
-    </nav>
-    <nav class="navbar navbar-expand-lg navbar-light container">
-        <section class="container">
-            <div>
-                <span style="color: #000000;" class="history-text-icon">Asyraf Rizqullah</span>
-            </div>
-        </section>
-    </nav>
-</header>
+            </section>
+        </nav>
+        <nav class="navbar navbar-expand-lg navbar-light container">
+            <section class="container">
+                <div>
+                    <span style="color: #000000;" class="history-text-icon">Asyraf Rizqullah</span>
+                </div>
+            </section>
+        </nav>
+    </header>
 
-<header>
-    <nav>
-        <section class="container">
-            <div class="row">
-                <div>
-                    <span style="color: #1789e660;" class="list-text-icon">Best Prize</span> 
-                </div>
-                <div class="card-hotel">
-                    <div class="rating">4.5</div>
-                    <div class="price">Rp. 200.000/malam</div>
-                    <img src="Assets/Images/imgBedroom.png" alt="">
-                    <div class="layer-shadow">
-                        <h5>Ocean Land</h5>
-                        <h7>Bandung, Indonesia</h7>
+    <header>
+        <nav>
+            <section class="container">
+                <div class="row">
+                    <div>
+                        <span style="color: #1789e660;" class="list-text-icon">Best Prize</span>
                     </div>
+                    <div class="card-hotel">
+                        <div class="rating">4.5</div>
+                        <div class="price">Rp. 200.000/malam</div>
+                        <img src="Assets/Images/imgBedroom.png" alt="">
+                        <div class="layer-shadow">
+                            <h5>Ocean Land</h5>
+                            <h7>Bandung, Indonesia</h7>
+                        </div>
+                    </div>
+                </div><br><br>
+            </section>
+        </nav>
+        <nav class="navbar navbar-expand-lg navbar-light container">
+            <section class="container">
+                <div>
+                    <table>
+                        <tr>
+                            <td>
+                                <span style="color: #804040;" class="list-text-icon">Deluxe Room</span>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <span style="color: #000000;" class="history-text-icon">20 dec - 23 dec 1 orang</span>
+                            </td>
+                        </tr>
+                    </table>
                 </div>
-            </div><br><br>
-        </section>
-    </nav>
-    <nav class="navbar navbar-expand-lg navbar-light container">
-        <section class="container">
-            <div>
-                <table>
-                    <tr>
-                        <td>
-                            <span style="color: #804040;" class="list-text-icon">Deluxe Room</span>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <span style="color: #000000;" class="history-text-icon">20 dec - 23 dec 1 orang</span>
-                        </td>
-                    </tr>
-                </table>
-            </div>
-        </section>
-    </nav>
-    <nav class="navbar navbar-expand-lg navbar-light container">
-        <section class="container">
-            <div>
-                <span style="color: #000000;" class="history-text-icon">Asyraf Rizqullah</span>
-            </div>
-        </section>
-    </nav>
-</header>
+            </section>
+        </nav>
+        <nav class="navbar navbar-expand-lg navbar-light container">
+            <section class="container">
+                <div>
+                    <span style="color: #000000;" class="history-text-icon">Asyraf Rizqullah</span>
+                </div>
+            </section>
+        </nav>
+    </header>
 
     <footer class="container">
         <div class="row" style="margin-top: 69px;">
@@ -238,4 +239,5 @@
         <p class="footer-last-text text-center">Copyright 2021 • All rights reserved • GIRIDORZZ</p>
     </footer>
 </body>
+
 </html>
