--- a/history.html
+++ b/history.html
@@ -21,10 +21,10 @@
                 <span class="brand-text-icon">GIRIDORZZ</span>
             </a>
             <nav class="navbar-nav navbar-center">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="home.html">
                     Home
                 </a>
-                <a class="nav-link active" href="#">
+                <a class="nav-link active" href="detail-kamar.html">
                     Booking
                 </a>
                 <a class="nav-link" href="detail-hotel.html">
@@ -35,6 +35,16 @@
                 <a class="nav-link" href="details.html">
                     Asyraf
                 </a>
+            </nav>
+            <nav class="navbar navbar-nav " style="position: absolute; top: 0; right: 0;">
+                <a>
+                    User
+                </a>
+                <form action="login.html">
+                    <button class="btn btn-warning nav-link" type="submit">
+                        Logout
+                    </button>
+                </form>
             </nav>
         </nav>
     </header>
