--- a/detail-kamar.html
+++ b/detail-kamar.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="shortcut icon" href="./Assets/Images/logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="./Assets/css/details.css">
+    <link rel="stylesheet" href="details.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -21,13 +21,13 @@
                 <span class="brand-text-icon">GIRIDORZZ</span>
             </a>
             <nav class="navbar-nav navbar-center">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="home.html">
                     Home
                 </a>
-                <a class="nav-link" href="history.html">
+                <a class="nav-link" href="detail-kamar.html">
                     Booking
                 </a>
-                <a class="nav-link active" href="#">
+                <a class="nav-link active" href="detail-hotel.html">
                     Hotels
                 </a>
             </nav>
@@ -72,7 +72,7 @@
                 <p class=" booking-price" style="color: #1ABC9C;">Rp 100.000 <span style="color: #B0B0B0; ">/
                         Malam</span></p>
                 <p class="booking-promo">Anda bisa membayar Rp 180.000 / 2 malam</p>
-                <form action="page/booking/index.html">
+                <form action="/page/index.php">
                     <button class="booking-button btn btn-warning">Booking</button>
                 </form>
             </div>
