Gabung Frontend & Backend Detail Kamar

--- a/daftar-hotel.html
+++ b/daftar-hotel.html
@@ -62,7 +62,7 @@
                 <div class="card-hotel">
                     <div class="rating">4.5</div>
                     <div class="price">Rp. 200.000/malam</div>
-                    <a href="detail-hotel.html">
+                    <a href="detail-hotel.php">
                         <img src="Assets/Images/imgBedroom.png" alt="">
                         <div class="layer-shadow">
                             <h5>Ocean Land</h5>
